# greentic-deployer

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.distroless  README.md  SECURITY_FIX_REPORT.md  clippy.err  coverage-policy.json  pr-changed-files.txt  pr-comment.md
.codex/: PR-00-AUDIT.md  PR-01-canonical-deployer-contract-generic-schema-ownership.md  PR-02-k8s-raw-provider.md  PR-03-helm-provider.md  PR-05-snap-provider.md  PR-06-juju-providers.md  PR-08-wizard-replay-examples.md  PR-31-secret-env-name-alignment.md
.codex/done/: DEP-PR-01.md  DEP-PR-02.md  DEP-PR-03.md  DEP-PR-04.md  GEN-PR-01.md  GEN-PR-02.md  GEN-PR-03.md  PK-PR-01.md  PK-PR-02.md  PK-PR-03.md  PR-04-terraform-provider.md  PR-07-serverless-provider.md  PR-29-runtime-secret-promotion.md  PR-30-secrets-provider-binding.md
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dev-publish.yml  nightly-coverage.yml  nightly-semver.yml  publish-gtpacks.yml  rc-build.yml  release.yml  runtime-image-lane.yml
.superpowers/sdd/: azure-report.md  gcp-report.md
ci/: ensure_fixture_tools.sh  local_check.sh  nightly_matrix.json
components/iac-write-files/: Cargo.toml
components/iac-write-files/src/: lib.rs
crates/greentic-deploy-spec/: Cargo.toml  README.md
crates/greentic-deploy-spec/src/: adapters.rs  audit.rs  bundle_deployment.rs  capability_slot.rs  credentials.rs  defaults.rs  engine.rs  environment.rs  environment_runtime.rs  environment_update_channel.rs  error.rs  ids.rs  integrity.rs  json_schema.rs  lib.rs  messaging_endpoint.rs  pack_config.rs  pack_list_lock.rs  refs.rs  remote.rs  retention.rs  revenue_policy.rs  revision.rs  runtime_config.rs  traffic_split.rs  version.rs
crates/greentic-deploy-spec/src/engine/: bindings.rs  bundles.rs  inline_stash.rs  messaging.rs  revisions.rs  traffic.rs  trust_root.rs
crates/greentic-deploy-spec/tests/: adapter.rs  basis_points.rs  cross_references.rs  environment_validation.rs  lifecycle.rs  pack_descriptor.rs  refs.rs  round_trip.rs
crates/greentic-environment-store-postgres/: Cargo.toml
crates/greentic-environment-store-postgres/migrations/: 20260609000001_initial.sql
crates/greentic-environment-store-postgres/src/: lib.rs
crates/greentic-environment-store-postgres/tests/: integration.rs
crates/greentic-operator-store-server/: Cargo.toml
crates/greentic-operator-store-server/migrations/: 20260610000001_initial.sql  20260612000001_trust_roots.sql  20260612000002_revenue_policies.sql  20260612000003_idempotency_audit.sql  20260612000004_backups.sql  20260625000001_audit_retention.sql
crates/greentic-operator-store-server/src/: api.rs  http.rs  lib.rs  main.rs  rbac.rs  sqlite.rs  storage.rs
crates/greentic-operator-store-server/tests/: http_api.rs  http_health.rs  sqlite_storage.rs
crates/greentic-operator-store-server/tests/common/: mod.rs
crates/greentic-operator-trust/: Cargo.toml  README.md
crates/greentic-operator-trust/src/: lib.rs  operator_key.rs  revenue_policy.rs  test_support.rs  trust_root.rs
docs/: cloudrun-deployment.md  cloudrun-internals.md  deployment-packs.md  env-packs.md  extension-slot-design.md  extensions.md  k8s-deployment.md  nightly_e2e.md  replay-examples.md  single-vm-v1.md
examples/: single-vm.deployment.yaml
examples/cloudrun-demo/: INDEX.md  README.md  RUN-BY-HAND.md  cloudrun.env.json.tmpl  demo.sh
scripts/: ci-smoke.sh  install-hooks.sh  nightly_e2e_stub.sh
src/: adapter.rs  admin_access.rs  apply.rs  aws.rs  azure.rs  cli_builtin_dispatch.rs  config.rs  contract.rs  defaults.rs  deployment.rs  desktop.rs  error.rs  extension.rs  extension_sources.rs  gcp.rs  helm.rs  juju_k8s.rs  juju_machine.rs  k8s_raw.rs  lib.rs  main.rs  multi_target.rs  operator.rs  operator_key.rs  pack_introspect.rs  pack_ref.rs  path_safety.rs  plan.rs  rollout_telemetry.rs  runtime_secret_sink.rs  runtime_secrets.rs  serverless.rs  single_vm.rs  snap.rs  sorx_routing.rs  spec.rs  surface.rs  telemetry.rs  terraform.rs  tool_check.rs
src/bundle_upload/: azure.rs  dispatcher.rs  error.rs  gcs.rs  mod.rs  s3.rs  types.rs  uploader.rs
src/cli/: bootstrap.rs  bundle_fetch.rs  bundle_stage.rs  bundles.rs  config.rs  credentials.rs  deploy.rs  dispatch.rs  dispatch_remote.rs  env.rs  env_apply.rs  env_manifest.rs  env_packs.rs  env_up.rs  extensions.rs  messaging.rs  migrate.rs  migrate_state.rs  mod.rs  pack_config_stage.rs  release_artifacts.rs  revisions.rs  secrets.rs  tests_common.rs  traffic.rs  trust_root.rs  updates.rs
src/credentials/: bootstrap.rs  mod.rs  rotate.rs  rules_export.rs  store_paths.rs  validate.rs
src/env_packs/: mod.rs  registry.rs  render.rs  slot.rs
src/environment/: atomic_write.rs  audit.rs  bootstrap.rs  bundle_deployment.rs  file_lock.rs  http_store.rs  lifecycle.rs  messaging.rs  mod.rs  mutations.rs  mutations_local.rs  reads.rs  runtime_config.rs  snapshot.rs  store.rs  trust_root.rs
src/ext/: backend_adapter.rs  builtin_bridge.rs  cli.rs  describe.rs  diagnostic.rs  dispatcher.rs  errors.rs  loader.rs  mod.rs  registry.rs  wasm.rs
testdata/bundles/: perf-smoke-bundle.gtbundle  provider-only-bundle.gtbundle  provider-packs-bundle.gtbundle  telegram-bundle.gtbundle  templates-bundle.gtbundle
tests/: acme_e2e.rs  audit_integration.rs  aws_cli.rs  aws_ecs_e2e.rs  aws_pack.rs  azure_cli.rs  azure_pack.rs  bundle_upload_s3_localstack.rs  cloud_provider_pack_fixtures.rs  environment_store.rs  ext_apply_integration.rs  ext_cli.rs  ext_dispatch.rs  ext_loader.rs  gcp_cli.rs  gcp_cloudrun_e2e.rs  gcp_pack.rs  helm_cli.rs  juju_k8s_cli.rs  juju_machine_cli.rs  k8s_env_up_e2e.rs  k8s_raw_cli.rs  k8s_reconcile_e2e.rs  k8s_vault_env_up_e2e.rs  multi_target_cli.rs  multicloud_terraform_fixture.rs  nightly_matrix.rs  op_cli.rs  operator_cli.rs  pr02_k8s_raw_pack.rs  pr03_helm_pack.rs  pr04_terraform_pack.rs  pr05_snap_pack.rs  pr06_juju_packs.rs  pr07_serverless_pack.rs  pr08_replay_examples.rs  serverless_cli.rs  single_vm_cli.rs  snap_cli.rs  store_server_e2e.rs  (+1 more)
(+346 files in other folders)
