[package]
name = "greentic-deployer"
version = "1.1.0-dev.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic deployer runtime for plan construction and deployment-pack dispatch"
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-deployer"
homepage = "https://github.com/greenticai/greentic-deployer"
documentation = "https://docs.greentic.ai/deployer"
keywords = [
    "greentic",
    "deployer",
    "deployment-pack",
    "runner",
]
categories = [
    "development-tools",
]

[features]
default = ["bundle-upload-aws", "runtime-secrets-aws"]
internal-tools = []
test-utils = []
bundle-upload-aws = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-smithy-runtime-api"]
runtime-secrets-aws = ["dep:aws-sdk-secretsmanager", "dep:aws-config", "dep:aws-smithy-runtime-api"]
bundle-upload-gcp = []
bundle-upload-azure = []

[[bin]]
name = "greentic-deployer"
path = "src/main.rs"

[[bin]]
name = "build_fixture_gtpacks"
path = "src/bin/build_fixture_gtpacks.rs"
required-features = [
    "internal-tools",
]

[[bin]]
name = "replay_deployer_scaffolds"
path = "src/bin/replay_deployer_scaffolds.rs"
required-features = [
    "internal-tools",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
greentic-config = ">=1.1.0-dev, <1.2.0-0"
greentic-config-types = ">=1.1.0-dev, <1.2.0-0"
serde_json = "1"
semver = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tar = "0.4"
once_cell = "1"
toml = "0.9"
indexmap = "2"
jsonschema = "0.46"
sha2 = "0.11"
hex = "0.4"
url = "2"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[dependencies.greentic-telemetry]
version = ">=1.1.0-dev, <1.2.0-0"
features = [
    "otlp",
]

[dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.greentic-distributor-client]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.greentic-secrets-lib]
version = ">=1.1.0-dev, <1.2.0-0"
features = [
    "providers-dev",
]

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5.2"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
]

[dependencies.zip]
version = "8"
default-features = false
features = [
    "deflate",
]

[dependencies.reqwest]
version = "0.13"
features = [
    "blocking",
    "json",
    "rustls",
]

[dependencies.chrono]
version = "0.4"
default-features = false
features = [
    "serde",
    "clock",
]

[dependencies.aws-sdk-s3]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-sdk-secretsmanager]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-config]
version = "1"
optional = true
default-features = false
features = [
    "rustls",
    "rt-tokio",
    "credentials-login",
]

[dependencies.aws-smithy-runtime-api]
version = "1"
optional = true

[dependencies.tempfile]
version = "3"

[dev-dependencies]
wat = "1"
