[workspace]
members = [
    ".",
    "crates/greentic-deploy-spec",
    "crates/greentic-environment-store-postgres",
    "crates/greentic-operator-store-server",
    "crates/greentic-operator-trust",
]
resolver = "2"

[package]
name = "greentic-deployer"
version = "1.1.27"
edition = "2024"
rust-version = "1.95"
description = "Greentic deployer runtime for plan construction and deployment-pack dispatch"
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-deployer"
homepage = "https://github.com/greenticai/greentic-deployer"
documentation = "https://docs.greentic.ai/deployer"
keywords = [
    "greentic",
    "deployer",
    "deployment-pack",
    "runner",
]
categories = [
    "development-tools",
]

[features]
default = ["bundle-upload-aws", "runtime-secrets-aws", "creds-aws", "deploy-aws-ecs", "k8s-client"]
internal-tools = []
test-utils = []
bundle-upload-aws = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-smithy-runtime-api"]
runtime-secrets-aws = ["dep:aws-sdk-secretsmanager", "dep:aws-config", "dep:aws-smithy-runtime-api"]
# C3 (Phase C): AWS deployer env-pack credentials (typed STS + IAM
# SimulatePrincipalPolicy validation, IAM rules-pack bootstrap). Default-on
# alongside the other AWS deps; the env-pack registers only when this is
# enabled.
creds-aws = ["dep:aws-sdk-sts", "dep:aws-sdk-iam", "dep:aws-config", "dep:aws-smithy-runtime-api"]
# Phase D D-AWS-1 (PR-2): the aws-sdk-backed `RealEcsTarget` impl of the
# `EcsDeployTarget` seam — drives ECS task sets + ELBv2 weighted forward
# actions. Default-on alongside the other AWS deps. The seam / fake / verbs
# from PR-1 are SDK-free under `creds-aws`; this feature only adds the real
# client, so `--no-default-features --features creds-aws` still builds.
deploy-aws-ecs = ["dep:aws-sdk-ecs", "dep:aws-sdk-elasticloadbalancingv2", "dep:aws-config", "dep:aws-smithy-runtime-api"]
# Phase D K8s slice (PR-5.2): typed Kubernetes API client behind the
# `K8sCluster` / `K8sValidatorClient` seams. Default-on alongside the AWS
# deps; kube's defaults are client + rustls-tls + ring (no openssl). The
# direct `rustls` dep is only for pinning the process-default CryptoProvider
# at `connect()` — both `ring` (kube) and `aws-lc-rs` (AWS SDK) are linked,
# so rustls 0.23 cannot auto-select one and the first TLS handshake panics.
k8s-client = ["dep:kube", "dep:k8s-openapi", "dep:rustls"]
bundle-upload-gcp = []
bundle-upload-azure = []

[[bin]]
name = "greentic-deployer"
path = "src/main.rs"

[[bin]]
name = "build_fixture_gtpacks"
path = "src/bin/build_fixture_gtpacks.rs"
required-features = [
    "internal-tools",
]

[[bin]]
name = "replay_deployer_scaffolds"
path = "src/bin/replay_deployer_scaffolds.rs"
required-features = [
    "internal-tools",
]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target}.{archive-format}"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
fs4 = "0.13"
greentic-bundle = ">=1.1.0-0, <1.2.0-0"
greentic-config = ">=1.1.0-0, <1.2.0-0"
greentic-config-types = ">=1.1.0-0, <1.2.0-0"
# Floor is 0.2.4, NOT 0.2.3: `cli/updates.rs` uses
# `greentic_deploy_spec::DEFAULT_PLAN_ENDPOINT`, which 0.2.3 does not define. The
# path dep masks this locally — it always resolves to the in-tree copy — so the
# workspace builds green while every crates.io consumer that resolves 0.2.3 fails
# to compile this crate. Publishing a member crate and using its new API in the
# same release means bumping this floor in the same PR.
greentic-deploy-spec = { path = "crates/greentic-deploy-spec", version = ">=0.2.5, <0.3" }
greentic-operator-trust = { path = "crates/greentic-operator-trust", version = "0.2" }
# did:web resolution for `trust-root add-did`. Default features only: `cli` and
# `testing` would drag clap/tokio/rand in for no runtime benefit.
greentic-trust = "0.2"
serde_json = "1"
semver = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tar = "0.4"
once_cell = "1"
toml = "0.9"
indexmap = "2"
jsonschema = "0.46"
sha2 = "0.11"
hex = "0.4"
ulid = "1"
url = "2"
percent-encoding = "2"
rpassword = "7"
rustix = { version = "1", features = ["process"], default-features = false }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "zeroize"] }
zeroize = "1"
rand = "0.9"
libc = "0.2"
# Env-manifest authoring form (PR-5, `plans/operator-surface-unification.md`):
# `manifest_form_spec()` / `answers_to_manifest()` are typed lib API, so this
# is a runtime dep now (it was dev-only for the C6 env-pack YAML round-trip
# tests; the env-pack trait still carries raw YAML). Already in the runtime
# graph via greentic-bundle -> greentic-qa-lib, so this adds no new crates.
qa-spec = ">=1.1.0-0, <1.2.0-0"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
]

[dependencies.greentic-telemetry]
# Floor pinned to the C5.1 publish that exposes `RolloutEvent` +
# `emit_rollout_event`. Lower versions in the same range satisfy
# `>=1.1.0-dev` but lack the rollout module.
version = ">=1.1.0-0, <1.2.0-0"
features = [
    "otlp",
]

[dependencies.greentic-types]
version = ">=1.1.0-0, <1.2.0-0"

[dependencies.greentic-distributor-client]
version = ">=1.1.0-0, <1.2.0-0"

[dependencies.greentic-secrets-lib]
version = ">=1.1.0-0, <1.2.0-0"
features = [
    "providers-dev",
    "providers-vault",
]

[dependencies.greentic-update]
# MOVED LANES, not just bumped (update#21). This crate tracked greentic-update's
# `0.1.<RUN_ID>` dev line because that was its only line. greentic-update now
# ships a stable 1.1.x line from its own `main`, and the 0.1.x dev line is for
# `develop` consumers only — the two ranges deliberately do not overlap. Staying
# on `<0.2` here froze this crate on the 2026-07-07 dev build with nothing
# failing loudly: every subsequent main-lane fix (staging, plan, binswap) landed
# on 1.1.x and was invisible to us. Same lane as the rest of our 1.1 pins.
#
# Floor raised to 1.1.2: adds the per-channel downgrade guard (`StageState.channel`
# + channel-scoped admission facts). The resume re-gate below (`current_admission_facts`)
# reads `StageState.channel`, which only exists at >= 1.1.2.
version = ">=1.1.2, <1.2.0-0"
features = [
    "binswap",
    "enroll",
    "mtls",
]

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5.2"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
]

[dependencies.zip]
version = "8"
default-features = false
features = [
    "deflate",
]

[dependencies.reqwest]
version = "0.13"
features = [
    "blocking",
    "json",
    "rustls",
]

[dependencies.chrono]
version = "0.4"
default-features = false
features = [
    "serde",
    "clock",
]

[dependencies.aws-sdk-s3]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-sdk-secretsmanager]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-config]
version = "1"
optional = true
default-features = false
features = [
    "rustls",
    "rt-tokio",
    "credentials-login",
]

[dependencies.aws-smithy-runtime-api]
version = "1"
optional = true

[dependencies.aws-sdk-sts]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-sdk-iam]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-sdk-ecs]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.aws-sdk-elasticloadbalancingv2]
version = "1"
optional = true
default-features = false
features = [
    "default-https-client",
    "rt-tokio",
]

[dependencies.kube]
version = "3.1"
optional = true

# Only used to install a process-default rustls CryptoProvider before the
# first cluster connection (see `kube_client::connect`). `ring` matches
# kube's bundled provider; version unifies with kube's transitive rustls.
[dependencies.rustls]
version = "0.23"
optional = true
features = ["ring"]

[dependencies.k8s-openapi]
# Version feature pins the generated API types, not the cluster we can
# talk to — v1_33 types are forward-compatible with newer servers and
# cover everything the deployer touches (all stable since well before
# 1.31). Bump only when a newer-only API field is needed.
version = "0.27"
optional = true
features = [
    "v1_33",
]

[dependencies.tempfile]
version = "3"

[dev-dependencies]
flate2 = "1"
wat = "1"
# kube-client mock harness (PR-5.2): drive a real `kube::Client` against
# a `tower_test::mock` service so the K8sCluster / K8sValidatorClient
# impls are asserted at the HTTP layer without a cluster.
tower-test = "0.4"
http = "1"
http-body-util = "0.1"
# Re-declared to turn on `test_support` (shared keypair fixtures) for tests.
greentic-operator-trust = { path = "crates/greentic-operator-trust", version = "0.2", features = ["test-utils"] }
# Path-only (no version) on purpose: the server crate is `publish = false`,
# and cargo strips versionless path dev-deps at publish time. Used by the
# `store_server_e2e` test to drive the real `HttpEnvironmentStore` client
# against a real operator-store-server listener.
greentic-operator-store-server = { path = "crates/greentic-operator-store-server" }
axum = "0.8"
# Path-only (no version) like the store-server above: lets the live-cluster
# E2E set a `credentials_ref` through the public `EnvironmentStore` API
# (the K8s deployer requires credential material and there is no CLI setter).
# Resolves to the same path crate the lib uses, so the `Environment` types
# unify across the test/lib boundary.
greentic-deploy-spec = { path = "crates/greentic-deploy-spec" }
# Re-declared (same registry version the lib already pins) so the live-cluster
# E2E can derive the canonical store-key the bound-credential resolver reads,
# and seed a ServiceAccount token via env var. Already in the lockfile via the
# normal dep, so no resolution change.
greentic-secrets-lib = ">=1.1.5, <1.2.0-0"
