[package]
name = "greentic-deploy-spec"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic deployment object-model schemas (Environment, Revision, TrafficSplit, BundleDeployment, Credentials, PackConfig, RuntimeConfig)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-deployer"
homepage = "https://github.com/greenticai/greentic-deployer"
documentation = "https://docs.greentic.ai/deployer/spec"
keywords = ["greentic", "deployer", "deployment", "schema", "spec"]
categories = ["development-tools", "data-structures"]

[features]
default = []
schemars = ["dep:schemars"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
greentic-config-types = ">=1.1.0-0, <1.2.0-0"
greentic-secrets-spec = ">=1.1.0-0, <1.2.0-0"
greentic-types = ">=1.1.0-0, <1.2.0-0"
http = "1"
hex = "0.4"
schemars = { version = "0.8", optional = true }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = { package = "serde_yaml_gtc", version = "2.5.2" }
sha2 = "0.10"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }

[[bin]]
name = "gen-schemas"
path = "src/bin/gen_schemas.rs"
required-features = ["schemars"]

[dev-dependencies]
serde_json = "1"
