[package]
name = "greentic-operator-store-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Operator store server: HTTP front for the Greentic environment store (Phase D PR-4)"
license = "MIT"
publish = false

[dependencies]
greentic-deploy-spec = { path = "../greentic-deploy-spec", version = "0.1" }
axum = "0.8"
fs4 = "0.13"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "macros",
    "migrate",
]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
]

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
