[package]
name = "greentic-operator-trust"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic operator signing-key management and trust-root document semantics"
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-deployer"
homepage = "https://github.com/greenticai/greentic-deployer"
documentation = "https://docs.greentic.ai/deployer/operator-trust"
keywords = ["greentic", "deployer", "trust-root", "ed25519", "signing"]
categories = ["development-tools"]

[dependencies]
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "zeroize"] }
# Only the (ungated) `signing` module is used. `default-features = false`
# would be the right spec, but distributor-client's `store_auth` module
# references the optional `dirs_next` crate without a cfg gate, so the
# minimal build does not compile — track upstream before slimming this.
greentic-distributor-client = ">=1.1.0-dev, <1.2.0-0"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
zeroize = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"
